# please

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  directory.rs  git.rs  lib.rs  list.rs  main.rs  project.rs
tests/: cli.rs
