[package]
name = "please"
version = "0.1.0"
authors = [ "Paweł Lewandowski <pl.lewandowski@proton.me>" ]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
tempfile = "3.10.1"
